packages/webassemblyjs/test/fixtures/type-errors/unary-operand-missing/module.wast
(module 
  (func $type-unary-operand-missing
    (i32.eqz)
    (drop)
  )
)
